deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: longsocks
  labels:
    app.kubernetes.io/name: longsocks
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: longsocks
  ports:
    - name: ws
      port: 8080
      targetPort: 8080
      protocol: TCP
